chore: fixed header alignment

--- a/src/index.css
+++ b/src/index.css
@@ -229,10 +229,6 @@ h1 {
   }
 }
 
-th {
-  text-align: center !important;
-}
-
 .ant-dropdown .ant-dropdown-menu {
   padding: 6px 5px;
   border-radius: 5px;
